--- a/app/config/packages/nelmio_api_doc.yaml
+++ b/app/config/packages/nelmio_api_doc.yaml
@@ -40,11 +40,11 @@ nelmio_api_doc:
                   properties:
                     username:
                       type: string
-                      example: user@example.com
+                      example: john.doe@admin.local
                       description: User email
                     password:
                       type: string
-                      example: password123
+                      example: password
                       description: User password
                   required:
                     - username
