--- a/app/.env
+++ b/app/.env
@@ -12,5 +12,9 @@ JWT_TTL=86400
 ###< lexik/jwt-authentication-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1|mybudget\.dcorroyer\.fr)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> sentry/sentry-symfony ###
+SENTRY_DSN="https://c7d1e04ef4d6e7a0bb60dae3e51117c1@o4508924680077312.ingest.de.sentry.io/4508924682043472"
+###< sentry/sentry-symfony ###
