--- a/app/composer.json
+++ b/app/composer.json
@@ -22,6 +22,7 @@
     "phpdocumentor/reflection-docblock": "^5.4",
     "phpstan/phpdoc-parser": "^1.29",
     "runtime/frankenphp-symfony": "^0.2.0",
+    "sentry/sentry-symfony": "^5.2",
     "symfony/asset": "~7.1.0",
     "symfony/console": "~7.1.0",
     "symfony/dotenv": "~7.1.0",
